# llm-spark-exp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  HERMES_SIGNAL_LLAMA_CPP_SETUP.md  README.md  pyproject.toml  setup-gemma-qat-spark.sh
.claude/skills/refactor-synth-pipeline/: SKILL.md
data/: README.md
docs/: synthetic_perplexity_pipeline.md
models/: README.md
notebooks/: README.md
scripts/: extract_pose_landmark_bank_from_lmdb.py  generate_pose_landmark_bank.py  hermes-signal-stack.sh  run_osdface_pipeline.py
services/: README.md
src/llm_spark_exp/: __init__.py  paths.py  stock_prices_cli.py  synthetic_faces_cli.py  synthetic_perplexity_cli.py
src/llm_spark_exp/agents/: __init__.py  stock_prices.py
src/llm_spark_exp/synthetic_faces/: __init__.py  _common.py  constants.py
src/llm_spark_exp/synthetic_faces/augment/: __init__.py  photometric.py  pose.py
src/llm_spark_exp/synthetic_faces/generation/: __init__.py  center_worker.py  vec2face_plus.py
src/llm_spark_exp/synthetic_faces/planning/: __init__.py  center_sampling.py
src/llm_spark_exp/synthetic_faces/quality/: __init__.py  identity_consistency.py
src/llm_spark_exp/synthetic_faces/restoration/: __init__.py  flux_refine_worker.py  restore.py  restore_worker.py
src/llm_spark_exp/synthetic_perplexity/: __init__.py  pipeline.py
tests/: conftest.py  test_lmdb_export.py  test_paths.py  test_stock_prices.py  test_synthetic_faces.py  test_synthetic_faces_math.py  test_synthetic_perplexity.py  test_workers.py  test_workers_gpu.py
