[project]
name = "llm-spark-exp"
version = "0.1.0"
description = "Experiments with agents, local LLMs, fine-tuning, ML, and VLMs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "llm-spark-exp contributors" },
]
dependencies = [
  "httpx>=0.28.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "scikit-learn>=1.6.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "tqdm>=4.67.0",
  "typer>=0.15.0",
]

[project.scripts]
stock-prices = "llm_spark_exp.stock_prices_cli:app"
synthetic-faces = "llm_spark_exp.synthetic_faces_cli:app"
synthetic-perplexity = "llm_spark_exp.synthetic_perplexity_cli:app"

[project.optional-dependencies]
agents = [
  "anthropic>=0.42.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "openai>=1.59.0",
]
local-llm = [
  "accelerate>=1.2.0",
  "datasets>=3.2.0",
  "peft>=0.14.0",
  "safetensors>=0.5.0",
  "sentencepiece>=0.2.0",
  "transformers>=4.48.0",
  "trl>=0.13.0",
]
vlm = [
  "opencv-python>=4.10.0.84",
  "pillow>=11.0.0",
  "timm>=1.0.0",
]
synthetic-faces = [
  "huggingface-hub>=0.24.6",
  "fvcore>=0.1.5.post20221221",
  "imageio>=2.9.0",
  "lmdb>=1.0.0",
  "msgpack>=1.0.1",
  "omegaconf>=2.3.0",
  "pytorch-msssim>=1.0.0",
  "safetensors>=0.5.0",
  "sixdrepnet>=0.1.6",
  "timm>=0.9.16",
  "transformers>=4.48.0",
]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "hypothesis>=6.148.0",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "jupyterlab>=4.3.0",
  "mypy>=2.1.0",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.4",
  "notebook>=7.3.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_spark_exp"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]
markers = [
  "gpu: integration test needing a CUDA device plus model weights/repos; run with --run-gpu",
  "slow: slow or resource-heavy test",
]

[tool.coverage.run]
branch = true
source = ["llm_spark_exp"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402"]
# Ported OSDFace LoRA-merge math: keep upstream tensor naming (W_A, delta_W),
# the F/Fun/TF functional aliases, and the safetensors handle's .keys() call.
"src/llm_spark_exp/synthetic_faces/restoration/restore_worker.py" = ["N806", "N812", "SIM118"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
files = ["src/llm_spark_exp/synthetic_faces"]

[[tool.mypy.overrides]]
# The torch/diffusers GPU workers run untyped third-party code (no stubs); type
# checking them is noise until stubs exist, so only the pure modules are checked.
module = [
  "llm_spark_exp.synthetic_faces.generation.center_worker",
  "llm_spark_exp.synthetic_faces.restoration.restore_worker",
  "llm_spark_exp.synthetic_faces.restoration.flux_refine_worker",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
# Accepted patterns for a local ML pipeline that drives trusted external repos:
# B101 asserts; B404/B603/B607 subprocess with internally-built argv; B110 the
# intentional LMDB decode fallback; B614 torch.load of trusted local weights;
# B615 hf_hub_download without a pinned revision.
skips = ["B101", "B110", "B404", "B603", "B607", "B614", "B615"]
