[project]
name = "llm-spark-exp"
version = "0.1.0"
description = "Experiments with agents, local LLMs, fine-tuning, ML, and VLMs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "llm-spark-exp contributors" },
]
dependencies = [
  "httpx>=0.28.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "scikit-learn>=1.6.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "tqdm>=4.67.0",
  "typer>=0.15.0",
]

[project.scripts]
stock-prices = "llm_spark_exp.stock_prices_cli:app"

[project.optional-dependencies]
agents = [
  "anthropic>=0.42.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "openai>=1.59.0",
]
local-llm = [
  "accelerate>=1.2.0",
  "datasets>=3.2.0",
  "peft>=0.14.0",
  "safetensors>=0.5.0",
  "sentencepiece>=0.2.0",
  "transformers>=4.48.0",
  "trl>=0.13.0",
]
vlm = [
  "opencv-python>=4.10.0.84",
  "pillow>=11.0.0",
  "timm>=1.0.0",
]
# The synthetic face pipeline now lives in its own repo and is consumed as a package.
synthetic-faces = [
  "synth-data-pipeline-local-models",
]

[tool.uv.sources]
synth-data-pipeline-local-models = { git = "ssh://git@github.com/cukaric/ml-synthetic-faces-generation.git" }

[dependency-groups]
dev = [
  "hypothesis>=6.148.0",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "jupyterlab>=4.3.0",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.4",
  "notebook>=7.3.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_spark_exp"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["llm_spark_exp"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
